# fastapi-agent-practice

./: .gitignore  pyproject.toml
app/: config.py  main.py
app/api/: router.py
app/api/v1/: chat.py  users.py
app/core/: agent.py  database.py  tools.py
app/models/: user.py  user_interest.py
app/schemas/: chat.py  user.py
