[project]
name = "bamsae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.138.0",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "sqlmodel>=0.0.38",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
